--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "keywords": [
     "web audio"
   ],
-  "dependencies": {
-    "lodash.foreach": "^4.0.0",
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-preset-es2015": "6.9.0"
   },
