--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wac.sample-player",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "main": "SamplePlayer.js",
   "description": "Load and playback audio samples with the Web Audio API",
   "keywords": [
@@ -8,9 +8,16 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "babel-preset-es2015": "6.9.0"
+    "babel-preset-es2015": "6.9.0",
+    "eslint": "^2.8.0",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-jasmine": "^1.8.1",
+    "eslint-plugin-promise": "^1.3.2",
+    "eslint-plugin-standard": "^1.3.2"
   },
-  "scripts": {},
+  "scripts": {
+    "lint": "./node_modules/eslint/bin/eslint.js SamplePlayer.js"
+  },
   "author": "https://github.com/crosslandwa",
   "license": "MIT",
   "browserify": {
