Load SamplePlayer with as Promise
Expose factory methods (instead of constructor) to load SamplePlayer
from URL or a file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
         "jasmine": true
     },
     "globals": {
-      "XMLHttpRequest": true
+      "XMLHttpRequest": true,
+      "FileReader": true
     },
     "extends": "standard"
 }
