--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eslint-plugin-standard": "^1.3.2"
   },
   "scripts": {
-    "lint": "./node_modules/eslint/bin/eslint.js SamplePlayer.js"
+    "lint": "./node_modules/eslint/bin/eslint.js SamplePlayer.js src/**/*.js"
   },
   "author": "https://github.com/crosslandwa",
   "license": "MIT",
